# nhsx-website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  buildspec.yml  docker-compose.env.example  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  setup.cfg
app/: conftest.py  data.json  manage.py  package.json  pyproject.toml  setup.cfg
app/assets/_dev/: package.json
app/assets/_dev/js/: admin.js  main.js
app/assets/_dev/scss/: admin.scss  promo.scss  screen.scss
app/config/: assets.py  urls.py  wsgi.py
app/config/settings/: base.py  development.py  production.py  remote.py  staging.py  test.py
app/helpers/: finders.py  service.py  storage.py
app/modules/: migration_util.py
app/modules/ai_lab/: blocks.py  models.py  wagtail_hooks.py
app/modules/ai_lab/migrations/: 0001_initial.py  0002_ailabusecase.py  0003_ailabcasestudy.py  0004_ailabresourceindexpage.py  0005_ailabusecase_slug.py  0006_ailabexternalresource.py  0007_ailabresourceindexpage_sub_head.py  0008_auto_20200720_1105.py  0009_auto_20200720_1146.py  0010_auto_20200720_1431.py  0011_auto_20200720_1435_squashed_0012_auto_20200720_1536.py  0012_ailabguidance_ailabreport.py  0013_auto_20200720_2014.py  0014_auto_20200720_2034.py  0015_auto_20200721_1001.py  0016_auto_20200721_1541.py  0017_auto_20200722_1147.py  0018_auto_20200724_1308.py  0019_auto_20200727_1532.py  0020_auto_20200728_0910.py  0020_auto_20200729_1229.py  0021_ailabhomepage_homepage_body.py  0022_auto_20200729_0739.py  0023_merge_20200730_0850.py  0024_auto_20200730_0850.py  0025_ailabresourcecollection.py  0026_auto_20200828_0924.py  0027_auto_20201006_1027.py  0028_auto_20201006_1029.py  0029_auto_20201006_1338.py  0030_ailabresourcecollection_summary.py  (+14 more)
app/modules/blog_posts/: models.py
app/modules/case_studies/: abstract.py  models.py
app/modules/core/: blocks.py  blocks.py.orig  middleware.py  models.py  service.py  views.py  wagtail_hooks.py
app/modules/documents/: models.py  wagtail_hooks.py
app/modules/finder/: blocks.py
app/modules/home/: models.py
app/modules/ig_guidance/: models.py
app/modules/images/: models.py  service.py
app/modules/longform/: models.py
app/modules/meeting_minutes/: blocks.py  models.py
app/modules/news/: models.py
app/modules/people/: models.py
app/modules/publications/: models.py
app/modules/search/: views.py
app/modules/users/: models.py  service.py  wagtail_hooks.py
app/templates/: 404.html  analytics.txt  base.html
app/templates/_partials/: head_meta.html  hero.html  home_page_banner.html  page_meta.html  rebrand.html  site_wide_banner.html  tags.html  topics.html
app/templates/ai_lab/: ai_lab_category_index_page.html  ai_lab_home_page.html  ai_lab_publication.html  ai_lab_resource_collection.html  ai_lab_resource_index_page.html  ai_lab_resource_index_page.js.html  resource.html
app/templates/blocks/: filtered_case_studies.html  latest_blog_posts.html  latest_news.html  newsletter.html
app/templates/blog_posts/: blog_post_index_page.html
app/templates/core/: article_page.html  cookie_form_page.html  index_page.html  section_page.html
app/templates/home/: home_page.html
app/templates/ig_guidance/: guidance_listing_page.html  ig_template.html  internal_guidance.html
app/templates/longform/: longform_post.html
app/templates/meeting_minutes/: meeting_minutes.html  meeting_minutes_listing_page.html
app/templates/news/: news.html  news_index_page.html
app/templates/people/: people_listing_page.html  person.html
app/templates/publications/: publication_page.html
app/templates/wagtailnhsukfrontend/: header.html  promo.html
app/tests/: init.py
app/tests/fixtures/: __init__.py  site.py
(+377 files in other folders)
