[tool.poetry]
name = "NHSX"
version = "0.1.0"
description = "NHSX Wagtail site"
authors = ["andy@hactar.is"]
maintainers = ["dragon@dxw.com"]

[tool.poetry.dependencies]
python = "^3.6"

wagtail = "^2.14"

psycopg2 = "^2.8"
django-redis = "^5.0.0"
hiredis = "^2.0"
django-storages = "^1.7"
boto3 = "^1.18.49"
whitenoise = "^5.2"
envkey = "^1.2"
bugsnag = "^4.1"
wagtail-cache = "^1.0.0"
wagtailfontawesome = "^1.1"
django_extensions = "^3.1.3"
django-cacheops = "^6.0"
arrow = "^0.15.8"
wagtail-modelchooser = "^2.3"
consoler = "^0.1.2"
wagtail_cache = "^1.0.0"
python-memcached = "^1.59"
# Grey Panel Block and others are due to be deleted -- update wagtail-nhsuk-frontend with caution!
wagtail-nhsuk-frontend = "0.7.0"  
uwsgi = "^2.0.18"
django-assets = "^2.0"
django-autocomplete-light = "^3.5"
wagtail-2fa = "^1.4.2"
boto = "^2.49.0"
rollbar = "^0.16.1"
black = "^20.8b1"
wagtail_factories = "^2.0.1"
beautifulsoup4 = "^4.8.2"
django-basic-auth-ip-whitelist = "^0.3.4"
lxml = "^4.6.3"
# faker has issues with higher versions
faker = "4.0.3"


[tool.poetry.dev-dependencies]
codacy-coverage = "*"
coverage = "*"
csscompressor = "*"
cssmin = "*"
factory-boy = "*"
jsmin = "*"
mixer = "*"
ipdb = "*"
pdbpp = "*"
pytest = "^6.2.3"
pytest-cov = "*"
pytest-django = "*"
pytest-factoryboy = "*"
pytest-pythonpath = "*"
pytest-sugar = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
